ontopia-engine/src/test/resources/net/ontopia/testdata/ltm/error/unclosed-int-occ.ltm

/* this is a test for bug #614 */

[foo = "foo"]
[bar = "bar"]
{foo, bar, [[unclosed thingy]}

[baz = "baz"]